cluster/apps/default/docsrv/deploy.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: document-server
  namespace: default
spec:
  selector:
    matchLabels:
      app: document-server
  template:
    metadata:
      labels:
        app: document-server
      annotations:
        container.apparmor.security.beta.kubernetes.io/document-server: runtime/default
        seccomp.security.alpha.kubernetes.io/pod: runtime/default
    spec:
      containers:
        - name: document-server
          image: onlyoffice/documentserver
          resources:
            requests:
              memory: 1024Mi
              cpu: 50m
            limits:
              memory: 2048Mi
              cpu: 2000m
          livenessProbe:
            httpGet:
              port: 80
            initialDelaySeconds: 60
            timeoutSeconds: 10
          ports:
            - containerPort: 80
          securityContext:
            allowPrivilegeEscalation: false
          capabilities:
            add:
            - chown
            - dac_override
            - fowner
            - fsetid
            # - kill
            - setgid
            - setuid
            # - setpcap
            # - net_bind_service
            # - net_raw
            # - sys_chroot
            # - mknod
            # - audit_write
            # - setfcap
            drop:
            - All
          privileged: false
          readOnlyRootFilesystem: false
          runAsNonRoot: false
      automountServiceAccountToken: false
