cluster/apps/default/docsrv/service.yml
apiVersion: v1
kind: Service
metadata:
  name: document-server
  namespace: default
spec:
  selector:
    app: document-server
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
