cluster/apps/default/docsrv/allow-lb-ingress.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-lb-ingress
  namespace: default
spec:
  policyTypes:
  - Ingress
  podSelector:
    matchLabels:
      app: document-server
  ingress:
  - from: []
    ports:
      - protocol: TCP
        port: 80
